fixed carousel on mobile, fixed other issues from client

--- a/app/static/styles/base.css
+++ b/app/static/styles/base.css
@@ -16,6 +16,19 @@ html {
     font-size: 200%;
   }
   ol{ font-size: 150% }
+
+  .footer {
+    height: 5%;
+  }
+  .avatar {
+    height: 70px;
+    width: 70px;
+  }
+  table.center {
+    width:70%;
+    margin-left:15%;
+    margin-right:15%;
+  }
 }
 
 /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
@@ -23,7 +36,23 @@ html {
   p {
     font-size: 150%;
   }
-   ol{ font-size: 125% }
+  ol {
+     font-size: 125%
+  }
+  #workshop-carousel {
+     height: 450px;
+  }
+   .footer {
+        height: 7%;
+   }
+   .avatar {
+    height: 20px;
+    width: 20px;
+   }
+    table.center{
+        width: 100%;
+        background: rgba(250,250,250,0.5);
+    }
 }
 
 .background-image {
@@ -80,15 +109,28 @@ img {
     vertical-align: middle
 }
 
-body {
-	  /* Margin bottom by footer height */
-	  margin-bottom: 7%;
-	}
+.item {
+height: 375px;
+}
+
+.item img {
+max-height: 100%;
+max-width: 100%;
+position: absolute;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+margin: auto;
+}
+
+
+
 .footer {
 	  position: fixed;
 	  bottom: 0;
 	  width: 100%;
 	  /* Set the fixed height of the footer here */
-	  height: 5%;
+      margin-top: 75px;
 	  background-color: #e7e7e7;
 	}
